Resolve issue https://github.com/owncast/owncast/issues/1044 - use built-in videojs font icon instead - remove button clickhandler override to make button work on mobile

--- a/webroot/styles/video.css
+++ b/webroot/styles/video.css
@@ -14,8 +14,13 @@ video.video-js {
   content: url("../img/airplay.png");
 }
 
+.vjs-quality-selector .vjs-icon-placeholder {
+  font-family: VideoJS;
+  font-weight: 400;
+  font-style: normal;
+}
 .vjs-quality-selector .vjs-icon-placeholder::before {
-  content: url("../img/video-settings.png");
+  content: "\f110";
 }
 
 .vjs-big-play-button {
